--- a/services/inventory_service/Dockerfile
+++ b/services/inventory_service/Dockerfile
@@ -1,10 +1,16 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
+
+
+# Copy the service code
+COPY ./services/inventory_service /app
+
+# Copy the shared proto folder
+COPY ./shared_proto /app/shared_proto
+
+
+
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
-
-
-EXPOSE 5006
 CMD ["python", "app.py"]
