--- a/services/menu_service/Dockerfile
+++ b/services/menu_service/Dockerfile
@@ -1,11 +1,13 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
+
+# Copy the service code
+COPY ./services/menu_service /app
+
+# Copy the shared proto folder
+COPY ./shared_proto /app/shared_proto
+
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-
-COPY . .
-
-
-EXPOSE 5005
 CMD ["python", "app.py"]
