Fix data display issues and implement login system
- Fixed missing order_pb2 proto files (generated from order.proto)
- Fixed menu and inventory services dependency issues (added typing_extensions)
- Implemented complete login system with access code authentication
- Created login page with form, styling, and JavaScript functionality
- Added login API endpoint in gateway
- Updated orders page to redirect to login when not authenticated
- Fixed gateway Dockerfile to include database connection module
- All services now properly display data (menu, inventory, dashboard)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,9 @@ services:
 
   # Gateway
   gateway:
-    build: ./gateway
+    build:
+      context: .
+      dockerfile: ./gateway/Dockerfile
     ports:
       - "5000:5000"
     depends_on:
@@ -114,6 +116,7 @@ services:
       - .env
     volumes:
       - ./shared_proto:/app/shared_proto
+      - ./database:/app/database
     environment:
       - PYTHONPATH=/app/shared_proto
 
