--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -5,11 +5,14 @@ FROM python:3.12-slim
 WORKDIR /app
 
 # Copy requirements and install them
-COPY requirements.txt .
+COPY gateway/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
-COPY . .
+# Copy database connection module
+COPY database /app/database
+
+# Copy gateway app code
+COPY gateway /app
 
 # Expose port
 EXPOSE 5000
