--- a/services/cafe_service/Dockerfile
+++ b/services/cafe_service/Dockerfile
@@ -1,10 +1,14 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
+
 WORKDIR /app
-COPY requirements.txt .
+
+# Copy the service code
+COPY ./services/cafe_service /app
+
+# Copy the shared proto folder
+COPY ./shared_proto /app/shared_proto
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
 
-
-EXPOSE 5004
 CMD ["python", "app.py"]
