--- a/services/order_service/Dockerfile
+++ b/services/order_service/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
+
+COPY ./services/order_service /app
+
+COPY ./shared_proto /app/shared_proto
+
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
-
 
 EXPOSE 5002
 CMD ["python", "app.py"]
