--- a/services/login_service/Dockerfile
+++ b/services/login_service/Dockerfile
@@ -1,10 +1,12 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copy the service code
+COPY ./services/login_service /app
 
+# Copy the shared proto folder
+COPY ./shared_proto /app/shared_proto
 
-EXPOSE 5001
+RUN pip install --default-timeout=500 --no-cache-dir -r requirements.txt
+
 CMD ["python", "app.py"]
